--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
     hooks:
       - id: reorder-python-imports
   - repo: https://github.com/ambv/black
-    rev: 23.1.0
+    rev: 24.4.0
     hooks:
     - id: black
   - repo: https://github.com/PyCQA/flake8
@@ -24,7 +24,10 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=auto']
       - id: trailing-whitespace
+      - id: requirements-txt-fixer
 #  - repo: https://github.com/szebenyib/pre-commit-pytest
 #    rev: 051fea31dbabf063ab38428c34a92c76d1abd5dc
 #    hooks:
 #    - id: pytest
+#      args: ['--cov-config=.coveragerc', '--cov-branch', '--cov=MKVAudioSubsDefaulter',
+#             '--cov-fail-under', '80', '--cov-report', 'term-missing', '--cov-report', 'xml', 'tests/']
