--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-tqdm = "*"
+tqdm = "==4.66.2"
 
 [dev-packages]
-black = "*"
-coverage = "*"
-flake8 = "*"
-pipenv = "*"
-pre-commit = "*"
-pylint = "*"
-pytest = "*"
-pytest-cov = "*"
-pytest-mock = "*"
-python-dateutil = "*"
-tox = "*"
-tqdm = "*"
+black = "==24.4.0"
+coverage = "==7.4.4"
+flake8 = "==7.0.0"
+pipenv = "==2023.12.1"
+pre-commit = "==3.7.0"
+pylint = "==3.1.0"
+pytest = "==8.1.1"
+pytest-cov = "==5.0.0"
+pytest-mock = "==3.14.0"
+python-dateutil = "==2.9.0.post0"
+tox = "==4.14.2"
 
 [requires]
 python_version = ">=3.9"
