--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,15 +5,13 @@ repos:
     rev: v3.12.0
     hooks:
       - id: reorder-python-imports
-  - repo: https://github.com/ambv/black
-    rev: 24.4.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.2
     hooks:
-    - id: black
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        args: ['--max-line-length=100', '--extend-ignore=E501']
+      - id: ruff  # linter
+        args: ['--fix']
+      - id: ruff-format
+        args: ['--line-length=100']
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
