--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,7 @@ python_version = ">=3.9"
 tqdm = ">=4.66.2"
 
 [dev-packages]
-black = ">=24.4.0"
 coverage = ">=7.4.4"
-flake8 = ">=7.0.0"
 pipenv = ">=2023.12.1"
 pre-commit = ">=3.7.0"
 pylint = ">=3.1.0"
@@ -20,4 +18,5 @@ pytest = ">=8.1.1"
 pytest-cov = ">=5.0.0"
 pytest-mock = ">=3.14.0"
 python-dateutil = ">=2.9.0.post0"
+ruff = ">=0.4.2"
 tqdm = ">=4.66.2"
