--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,4 +8,5 @@ pytest>=8.1.1 ; python_version >= "3.9" and python_version < "4.0"
 pytest-cov>=5.0.0 ; python_version >= "3.9" and python_version < "4.0"
 pytest-mock>=3.14.0 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil>=2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
+ruff>=0.4.2 ; python_version >= "3.9" and python_version < "4.0"
 tqdm>=4.66.2 ; python_version >= "3.9" and python_version < "4.0"
