--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,28 @@
-default_stages: [commit, push]
+default_stages: [pre-commit, pre-push]
 fail_fast: false
 repos:
+  - repo: https://github.com/python-poetry/poetry
+    rev: 2.1.1
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+#      - id: poetry-export
+#        args: ["-f", "requirements.txt", "-o", "requirements.txt", "--without-hashes"]
+#      - id: poetry-export  # Dev dependencies
+#        args: ["-f", "requirements.txt", "-o", "requirements_dev.txt", "--with", "dev", "--without-hashes"]
   - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.12.0
+    rev: v3.14.0
     hooks:
       - id: reorder-python-imports
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.2
+    rev: v0.9.9
     hooks:
       - id: ruff  # linter
         args: ['--fix']
       - id: ruff-format
         args: ['--line-length=100']
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-ast
       - id: check-added-large-files
