--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [project]
 name = "mkvaudiosubsdefaulter"
-version = "1.3.5"
+version = "1.4.0"
 description = "Simple multi-processing python cli to set the default audio and/or subtitles of matroska (.mkv) files WITHOUT having to remux the file"
 authors = [
     {name = "Robert-Zacchigna"}
 ]
-license = {text = "GPL-3.0"}
+license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
-    "tqdm (>=4.67.1,<5.0.0)",
+    "tqdm (>=4.67.1)",
     "virtualenv (>=20.26.6)",
     "setuptools (>=70.0.0)",
     "certifi (>=2024.7.4)"
@@ -22,10 +22,10 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.12"
 pre-commit = "^4.1.0"
-pytest = "^8.3.4"
+pytest = "8.4.1"
 pytest-cov = "^6.0.0"
 pytest-mock = "^3.14.0"
-ruff = "^0.9.9"
+ruff = "0.12.11"
 tqdm = "^4.67.1"
 
 [tool.poetry.requires-plugins]
