--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "tqdm (>=4.67.1)",
-    "virtualenv (>=20.26.6)",
-    "setuptools (>=70.0.0)",
-    "certifi (>=2024.7.4)"
+    "tqdm >= 4.67.1",
+    "virtualenv >= 20.34.0",
+    "setuptools >= 80.9.0",
+    "certifi >= 2025.8.3"
 ]
 
 [build-system]
@@ -20,13 +20,14 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
-coverage = "^7.6.12"
-pre-commit = "^4.1.0"
-pytest = "8.4.1"
-pytest-cov = "^6.0.0"
-pytest-mock = "^3.14.0"
-ruff = "0.12.11"
-tqdm = "^4.67.1"
+coverage = "7.6.12"
+pre-commit = "4.1.0"
+pytest = "8.4.2"
+pytest-cov = "6.3.0"
+pytest-mock = "3.15.0"
+ruff = "0.12.12"
+tqdm = "4.67.1"
+identify = "2.6.14"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
